force-app/main/default/objects/Win_Loss_Config__c/Win_Loss_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Win Loss Config</label>
</CustomObject>