force-app/main/default/objects/Win_Loss_Config__c/fields/Batch_Scope__c.field-meta.xml
<CustomField>
    <fullName>Batch_Scope__c</fullName>
    <description>Intakes processed per batch execute (default 5). Keep small - each makes a callout.</description>
    <label>Batch Scope</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>