force-app/main/default/objects/Win_Loss_Config__c/fields/Confidence_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Threshold__c</fullName>
    <description>Minimum model confidence (0.00-1.00) to trust without review (default 0.55).</description>
    <label>Confidence Threshold</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>