force-app/main/default/objects/Win_Loss_Config__c/fields/Lookback_Days__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Days__c</fullName>
    <description>Default aggregation window for the digest (default 90).</description>
    <label>Lookback Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>