force-app/main/default/objects/Win_Loss_Config__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Anthropic model id. Defaults to claude-sonnet-4-6 when blank.</description>
    <label>Model</label>
    <length>60</length>
    <type>Text</type>
</CustomField>