force-app/main/default/objects/Win_Loss_Config__c/fields/Owner_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_User_Id__c</fullName>
    <description>18-char User Id of the firm owner who receives the digest. Blank defaults to the running user.</description>
    <label>Owner User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>