force-app/main/default/objects/Win_Loss_Config__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the digest is emailed to the owner in addition to the in-app bell.</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>